# summarize-and-sentiment-vietnamese-text-

./: .gitignore  CLEANUP_REPORT.md  README.md  config.py  config.yaml  graph.ipynb  notebook_config.py  params.yaml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: analysis.py  utils.py
app/core/: __init__.py  config.py  performance.py  services.py
models/sentiment/: config.json
notebooks/: 00_data_analysis.ipynb  01_eval.ipynb  01_processing.ipynb  02_train_summarizer.ipynb  03_train_sentiment.ipynb
requirements/: base.txt  dev.txt  prod.txt
scripts/: balance_sentiment.py  cleanup.py  cleanup_project.py  evaluate_model.py  maintenance.py  preprocessing.py  train_sentiment.py  train_summarizer.py
scripts/demos/: demo.py  demo_pipeline.py  demo_sentiment.py  demo_summarizer.py  simple_demo.py
src/: __init__.py
src/models/: __init__.py  pipeline.py  sentiment.py  summarizer.py
src/utils/: __init__.py  data_analysis.py  path_utils.py  text_utils.py  visualization.py
static/css/: style.css
static/js/: api-client.js  api-service.js  app.js  file-handler.js  file-upload.js  history-manager.js  main.js  results-display.js  ui-manager.js
templates/: index.html
tests/: conftest.py  test_utils_basic.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_services.py
